src/test/ui/higher-rank-trait-bounds/normalize-under-binder/issue-62529-1.stderr
error[E0277]: the size for values of type `impl Execute` cannot be known at compilation time
  --> $DIR/issue-62529-1.rs:80:10
   |
LL |       task(annotate(
   |  _____----_^
   | |     |
   | |     required by a bound introduced by this call
LL | |
LL | |
LL | |         Annotate::<RefMutFamily<usize>>::new(),
...  |
LL | |         }
LL | |     ));
   | |_____^ doesn't have a size known at compile-time
   |
   = help: the trait `Sized` is not implemented for `impl Execute`
note: required by a bound in `task`
  --> $DIR/issue-62529-1.rs:69:9
   |
LL | fn task<P>(processor: P) -> Task
   |         ^ required by this bound in `task`
help: consider relaxing the implicit `Sized` restriction
   |
LL | fn task<P: ?Sized>(processor: P) -> Task
   |          ++++++++

error[E0277]: the trait bound `impl Execute: Execute` is not satisfied
  --> $DIR/issue-62529-1.rs:80:10
   |
LL |       task(annotate(
   |  _____----_^
   | |     |
   | |     required by a bound introduced by this call
LL | |
LL | |
LL | |         Annotate::<RefMutFamily<usize>>::new(),
...  |
LL | |         }
LL | |     ));
   | |_____^ the trait `Execute` is not implemented for `impl Execute`
   |
note: required by a bound in `task`
  --> $DIR/issue-62529-1.rs:70:10
   |
LL | fn task<P>(processor: P) -> Task
   |    ---- required by a bound in this
LL | where P: Execute + 'static {
   |          ^^^^^^^ required by this bound in `task`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0277`.
